# depthestimation

./: .dir-locals.el  CMakeLists.txt  README.md  README.org  depthestimation.cpp  depthestimation.hpp  depthestimation_opencl.cpp  depthestimation_opencl.hpp  dual.ptx  dual_no_def.ptx  oclUtils.cpp  oclUtils.h  rectifier.cpp  types.hpp
data/depthestimation/kernels/: birch_tomasi.cl  blockmatching.cl  blockmatching_dual.cl  blockmatching_dual_no_def.cl  crosscheck.cl  kernels.cl_bak  normalize.cl  occlusionFill.cl  pyramid.cl
